<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/cardBackgroundColor"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textViewMoodItemEmoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_marginEnd="16dp"
    android:text="@string/list_item_mood_emoji" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMoodItemTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textColorSecondary"
            android:text="@string/list_item_mood_date_sample"/>

        <TextView
            android:id="@+id/textViewMoodItemNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimary"
            android:layout_marginTop="4dp"
            android:text="@string/list_item_mood_message_sample"
            android:visibility="gone"/> <!-- Initially gone, made visible if note exists -->
    </LinearLayout>
</LinearLayout>